[project]
name = "neptune-migration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=3.4.0",
    "neptune>=1.14.0",
    "neptune-query>=1.5.1",
    "wandb>=0.22.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[project.scripts]
example-pkg = "neptune_migration:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
mypy_path = './src/'
packages = 'neptune_migration'
